[project]
name = "json-prompt-modifier"
description = "An interactive JSON prompt editor for ComfyUI optimized for processing visual language model outputs like Qwen3-VQA, with auto-display, local file loading, and export capabilities. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/navyxiong/ComfyUI-JSON-Prompt-Modifier"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/navyxiong/ComfyUI-JSON-Prompt-Modifier/wiki"
"Bug Tracker" = "https://github.com/navyxiong/ComfyUI-JSON-Prompt-Modifier/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-JSON-Prompt-Modifier"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

